a1/brendan_gordon/TEST_PROGRAMS/invalidtype/xiru_zhu/invalid5.min
var test: int;
var test1: float;

test1 = test + test1 -- test1 + test +- test1; #valid

test = test + test1 -- test1 + test +- test1; #invalid

